# PyReqify

./: README.md  extract2.py  package_info.py  pipreqextract.py  piprequrementgen.py  prompt.txt  pyproject.toml  require2.txt  requirementsfromExtract.txt  setup.py
PyReqify/: README.md  pyreqify.py
demofiles/: Iris_flower_classification.ipynb  demofile.py
project/: demofile.py
